src/objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>AMCP_Formulary_Submission_URL__c</fullName>
        <inlineHelpText>Please add comma separated URLs if you are adding more than one</inlineHelpText>
        <label>Payer Dossier URL</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AMCP_Formulary_Submission__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Formulary communication documents for use with formulary decision makers.</description>
        <inlineHelpText>Formulary communication documents for use with formulary decision makers.</inlineHelpText>
        <label>Payer Dossier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_Duration__c</fullName>
        <description>Duration Study was in Active Status before moving to Completed or Closed.</description>
        <formula>IF(ISNULL(Date_Completed__c ),IF(ISNULL(Date_Closed__c), TODAY()-Date_Active__c, Date_Closed__c-Date_Active__c), Date_Completed__c - Date_Active__c)</formula>
        <inlineHelpText>Duration Study was in Active Status before moving to Completed or Closed.</inlineHelpText>
        <label>Active Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_End_Date__c</fullName>
        <label>Actual End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Start_Date__c</fullName>
        <inlineHelpText>Enter the date that effort begins on the research study/ research project.</inlineHelpText>
        <label>Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Anticipated_End_Date__c</fullName>
        <inlineHelpText>Approximate date study will be completed</inlineHelpText>
        <label>Anticipated End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Anticipated_Start_Date__c</fullName>
        <inlineHelpText>Choose the date the effort is anticipated to bein (this is NOT the expected contracting date)</inlineHelpText>
        <label>Anticipated Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approved_Duration__c</fullName>
        <description>Duration Study was in Approved Status before moving to Active.</description>
        <formula>IF(ISNULL(Date_Active__c ), TODAY()-Date_Approved__c, Date_Active__c - Date_Approved__c)</formula>
        <inlineHelpText>Duration Study was in Approved Status before moving to Active.</inlineHelpText>
        <label>Approved Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approver_Table__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>Approver__c</referenceTo>
        <relationshipLabel>Research</relationshipLabel>
        <relationshipName>Research</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Unit_Primary__c</fullName>
        <inlineHelpText>Business unit that is funding the activity.</inlineHelpText>
        <label>Business Unit (Primary)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Animal Health</fullName>
                </value>
                <value>
                    <fullName>Biotech</fullName>
                </value>
                <value>
                    <fullName>Consumer Health</fullName>
                </value>
                <value>
                    <fullName>Generics</fullName>
                </value>
                <value>
                    <fullName>Medical Devices</fullName>
                </value>
                <value>
                    <fullName>Pharmaceuticals</fullName>
                </value>
                <value>
                    <fullName>Vaccines</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <inlineHelpText>Describes whether the item is a Research Study/Research Topic.</inlineHelpText>
        <label>Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Basic Research</fullName>
                </value>
                <value>
                    <fullName>Clinical Research</fullName>
                </value>
                <value>
                    <fullName>Epidemiological Research</fullName>
                </value>
                <value>
                    <fullName>Pre-Clinical Research</fullName>
                </value>
                <value>
                    <fullName>Secondary Research</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Close_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Close Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completed_Duration__c</fullName>
        <description>Duration Study was in Completed Status before moving to Closed.</description>
        <formula>IF(ISNULL(Date_Closed__c ), TODAY()-Date_Completed__c, Date_Closed__c - Date_Completed__c)</formula>
        <inlineHelpText>Duration Study was in Completed Status before moving to Closed.</inlineHelpText>
        <label>Completed Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Conducted_with_an_Partner__c</fullName>
        <label>Conducted with an Partner?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Execution_Resource__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DRDW_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup and add related partnership to this Study. Only Approved &amp; Selected partnerships can be selected.</inlineHelpText>
        <label>DRDW Partner</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <filterItems>
                <field>Request__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>RWE_Partnership_Exploration</value>
            </filterItems>
            <filterItems>
                <field>Request__c.Partnership_Status__c</field>
                <operation>equals</operation>
                <value>Approved and Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Research</relationshipLabel>
        <relationshipName>RWE_Studies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DataLoad_ID__c</fullName>
        <externalId>true</externalId>
        <label>DataLoad ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataLoaded_TF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this check box if this study is created with  data loader rather than UI . This field excludes User from entering mandatory fields on UI</description>
        <label>DataLoaded TF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Analysis_and_Reporting_Duration__c</fullName>
        <description>Duration Study was in Stage =  Data Analysis and Reporting before moving to Study Deliverable(s) and Results</description>
        <formula>IF(ISNULL(Date_Study_Deliverable_s_and_Results__c), TODAY()-Date_Data_Analysis_and_Reporting__c, Date_Study_Deliverable_s_and_Results__c- Date_Data_Analysis_and_Reporting__c)</formula>
        <inlineHelpText>Duration Study was in Stage =  Data Analysis and Reporting before moving to Study Deliverable(s) and Results</inlineHelpText>
        <label>Data Analysis and Reporting Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Collection_Form_Description__c</fullName>
        <inlineHelpText>Use the enter key to add descriptions on a new line.</inlineHelpText>
        <label>Data Collection Form Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Data_Collection_Form_URL__c</fullName>
        <inlineHelpText>Please add comma separated URLs if you are adding more than one</inlineHelpText>
        <label>Data Collection Form URL</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Data_Collection_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data Collection Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Datavision_Number__c</fullName>
        <description>For Data Vision number or other identifier</description>
        <inlineHelpText>For Data Vision number or other identifier</inlineHelpText>
        <label>Datavision Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_Active__c</fullName>
        <description>Trigger updates this field when Status = Active</description>
        <label>Date Active</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Approved__c</fullName>
        <description>Trigger updates this field when Status = Approved</description>
        <label>Date Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Cancelled__c</fullName>
        <description>Trigger updates this field when Status = Cancelled</description>
        <label>Date Cancelled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Close_Out__c</fullName>
        <description>Trigger updates this field when Stage = Close Out</description>
        <label>Date Close Out</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Closed__c</fullName>
        <description>Trigger updates this field when Status = Closed</description>
        <label>Date Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <description>Trigger updates this field when Status = Completed</description>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Data_Analysis_and_Reporting__c</fullName>
        <description>Trigger updates this field when Stage = Data Analysis and Reporting</description>
        <label>Date Data Analysis and Reporting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Finalize_Store_Study_Deliverables__c</fullName>
        <description>Trigger updates this field when Stage = Finalize, Store Study Deliverables</description>
        <label>Date Finalize, Store Study Deliverables</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Ideation__c</fullName>
        <description>Trigger updates this field when Stage = Ideation</description>
        <label>Date Ideation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_On_Hold__c</fullName>
        <description>Trigger updates this field when Status = On Hold</description>
        <label>Date On Hold</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Oversee_Execution_of_Research__c</fullName>
        <description>Trigger updates this field when Stage = Oversee Execution of Research</description>
        <label>Date Oversee Execution of Research</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Questionnaire__c</fullName>
        <description>Trigger updates this field when Stage = Questionnaire</description>
        <label>Date Questionnaire</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Review_Approve_Study_Deliverable__c</fullName>
        <description>Trigger updates this field when Stage = Review/ Approve Study Deliverable</description>
        <label>Date Review/ Approve Study Deliverable</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Secure_Resources__c</fullName>
        <description>Trigger updates this field when Stage = Secure Resources</description>
        <label>Date Secure Resources</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Study_Deliverable_s_and_Results__c</fullName>
        <description>Trigger updates this field when Stage = Study Deliverable(s) and Results</description>
        <label>Date Study Deliverable(s) and Results</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Study_Development__c</fullName>
        <description>Trigger updates this field when Stage = Study Development</description>
        <label>Date Study Development</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Study_Execution__c</fullName>
        <description>Trigger updates this field when Stage = Study Execution</description>
        <label>Date Study Execution</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Enter a comprehensive description that would include keywords that other users might use to search.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Executing_Year__c</fullName>
        <formula>CASE(YEAR(Anticipated_End_Date__c) - YEAR(Anticipated_Start_Date__c),
1,TEXT(YEAR(Anticipated_Start_Date__c))+&apos;, &apos;+TEXT(YEAR(Anticipated_Start_Date__c)+1), 
2,TEXT(YEAR(Anticipated_Start_Date__c))+&apos;, &apos;+TEXT(YEAR(Anticipated_Start_Date__c)+1)+&apos;, &apos;+TEXT(YEAR(Anticipated_Start_Date__c)+2), 
3,TEXT(YEAR(Anticipated_Start_Date__c))+&apos;, &apos;+TEXT(YEAR(Anticipated_Start_Date__c)+1)+&apos;, &apos;+TEXT(YEAR(Anticipated_Start_Date__c)+2)+&apos;, &apos;+TEXT(YEAR(Anticipated_Start_Date__c)+3), 
4,TEXT(YEAR(Anticipated_Start_Date__c))+&apos;, &apos;+TEXT(YEAR(Anticipated_Start_Date__c)+1)+&apos;, &apos;+TEXT(YEAR(Anticipated_Start_Date__c)+2)+&apos;, &apos;+TEXT(YEAR(Anticipated_Start_Date__c)+3)+&apos;, &apos;+TEXT(YEAR(Anticipated_Start_Date__c)+4), 
5,TEXT(YEAR(Anticipated_Start_Date__c))+&apos;, &apos;+TEXT(YEAR(Anticipated_Start_Date__c)+1)+&apos;, &apos;+TEXT(YEAR(Anticipated_Start_Date__c)+2)+&apos;, &apos;+TEXT(YEAR(Anticipated_Start_Date__c)+3)+&apos;, &apos;+TEXT(YEAR(Anticipated_Start_Date__c)+4)+&apos;, &apos;+TEXT(YEAR(Anticipated_Start_Date__c)+5), 
6,TEXT(YEAR(Anticipated_Start_Date__c))+&apos;, &apos;+TEXT(YEAR(Anticipated_Start_Date__c)+1)+&apos;, &apos;+TEXT(YEAR(Anticipated_Start_Date__c)+2)+&apos;, &apos;+TEXT(YEAR(Anticipated_Start_Date__c)+3)+&apos;, &apos;+TEXT(YEAR(Anticipated_Start_Date__c)+4)+&apos;, &apos;+TEXT(YEAR(Anticipated_Start_Date__c)+5)+&apos;, &apos;+TEXT(YEAR(Anticipated_Start_Date__c)+6), 
7,TEXT(YEAR(Anticipated_Start_Date__c))+&apos;, &apos;+TEXT(YEAR(Anticipated_Start_Date__c)+1)+&apos;, &apos;+TEXT(YEAR(Anticipated_Start_Date__c)+2)+&apos;, &apos;+TEXT(YEAR(Anticipated_Start_Date__c)+3)+&apos;, &apos;+TEXT(YEAR(Anticipated_Start_Date__c)+4)+&apos;, &apos;+TEXT(YEAR(Anticipated_Start_Date__c)+5)+&apos;, &apos;+TEXT(YEAR(Anticipated_Start_Date__c)+6)+&apos;, &apos;+TEXT(YEAR(Anticipated_Start_Date__c)+7), 
8,TEXT(YEAR(Anticipated_Start_Date__c))+&apos;, &apos;+TEXT(YEAR(Anticipated_Start_Date__c)+1)+&apos;, &apos;+TEXT(YEAR(Anticipated_Start_Date__c)+2)+&apos;, &apos;+TEXT(YEAR(Anticipated_Start_Date__c)+3)+&apos;, &apos;+TEXT(YEAR(Anticipated_Start_Date__c)+4)+&apos;, &apos;+TEXT(YEAR(Anticipated_Start_Date__c)+5)+&apos;, &apos;+TEXT(YEAR(Anticipated_Start_Date__c)+6)+&apos;, &apos;+TEXT(YEAR(Anticipated_Start_Date__c)+7)+&apos;, &apos;+TEXT(YEAR(Anticipated_Start_Date__c)+8),
9,TEXT(YEAR(Anticipated_Start_Date__c))+&apos;, &apos;+TEXT(YEAR(Anticipated_Start_Date__c)+1)+&apos;, &apos;+TEXT(YEAR(Anticipated_Start_Date__c)+2)+&apos;, &apos;+TEXT(YEAR(Anticipated_Start_Date__c)+3)+&apos;, &apos;+TEXT(YEAR(Anticipated_Start_Date__c)+4)+&apos;, &apos;+TEXT(YEAR(Anticipated_Start_Date__c)+5)+&apos;, &apos;+TEXT(YEAR(Anticipated_Start_Date__c)+6)+&apos;, &apos;+TEXT(YEAR(Anticipated_Start_Date__c)+7)+&apos;, &apos;+TEXT(YEAR(Anticipated_Start_Date__c)+8)+&apos;, &apos;+TEXT(YEAR(Anticipated_Start_Date__c)+9), 
10,TEXT(YEAR(Anticipated_Start_Date__c))+&apos;, &apos;+TEXT(YEAR(Anticipated_Start_Date__c)+1)+&apos;, &apos;+TEXT(YEAR(Anticipated_Start_Date__c)+2)+&apos;, &apos;+TEXT(YEAR(Anticipated_Start_Date__c)+3)+&apos;, &apos;+TEXT(YEAR(Anticipated_Start_Date__c)+4)+&apos;, &apos;+TEXT(YEAR(Anticipated_Start_Date__c)+5)+&apos;, &apos;+TEXT(YEAR(Anticipated_Start_Date__c)+6)+&apos;, &apos;+TEXT(YEAR(Anticipated_Start_Date__c)+7)+&apos;, &apos;+TEXT(YEAR(Anticipated_Start_Date__c)+8)+&apos;, &apos;+TEXT(YEAR(Anticipated_Start_Date__c)+9)+&apos;, &apos;+TEXT(YEAR(Anticipated_Start_Date__c)+10), 
TEXT(YEAR(Anticipated_Start_Date__c)))</formula>
        <label>Executing Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Execution_Function__c</fullName>
        <inlineHelpText>The function that the owner belongs to that will be conducting the project</inlineHelpText>
        <label>Executing Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>R&amp;D - Pre-Clinical</fullName>
                </value>
                <value>
                    <fullName>R&amp;D - Clinical Dev</fullName>
                </value>
                <value>
                    <fullName>R&amp;D - Discovery</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <color>#0B24BE</color>
                    <label>Other</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Execution_Resource__c</fullName>
        <description>Will the study be fully or partially outsourced to a TPO? Or will the study be conducted using internal resources?</description>
        <inlineHelpText>Will the study be fully or partially outsourced to a TPO? Or will the study be conducted using internal resources?</inlineHelpText>
        <label>How will the Study be executed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>TPO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FDAMA_piece_Description__c</fullName>
        <inlineHelpText>Use the enter key to add descriptions on a new line.</inlineHelpText>
        <label>FDAMA piece Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FDAMA_piece_URL__c</fullName>
        <inlineHelpText>Please add comma separated URLs if you are adding more than one</inlineHelpText>
        <label>FDAMA piece URL</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FDAMA_piece__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Deliverables intended to produce FDA Modernization Act, section 114 (FDAMA 114) eligible data, to determine the eligibility of the data, and promotional materials intended for use subject to FDA promotional requirements.</inlineHelpText>
        <label>FDAMA piece</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_Protocol_Description__c</fullName>
        <inlineHelpText>Use the enter key to add descriptions on a new line.</inlineHelpText>
        <label>Study Protocol Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Final_Protocol__c</fullName>
        <inlineHelpText>Please add comma separated URLs if you are adding more than one</inlineHelpText>
        <label>Study Protocol Link</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Final_Protocol_checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Study Protocol</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Finalize_Store_StudyDeliverable_Duration__c</fullName>
        <description>Duration Study was in Stage =  Finalize, Store Study Deliverables before moving to Close Out</description>
        <formula>IF(ISNULL(Date_Close_Out__c), TODAY()-Date_Finalize_Store_Study_Deliverables__c, Date_Close_Out__c- Date_Finalize_Store_Study_Deliverables__c)</formula>
        <inlineHelpText>Duration Study was in Stage =  Finalize, Store Study Deliverables before moving to Close Out</inlineHelpText>
        <label>Finalize,Store StudyDeliverable Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ideation_Duration__c</fullName>
        <description>Duration Study was in Stage = Ideation before moving to Secure Resources.</description>
        <formula>IF(ISNULL(Date_Secure_Resources__c), TODAY()-Date_Ideation__c, Date_Secure_Resources__c- Date_Ideation__c)</formula>
        <inlineHelpText>Duration Study was in Stage = Ideation before moving to Secure Resources.</inlineHelpText>
        <label>Ideation Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Molecule__c</fullName>
        <inlineHelpText>Does the study involve the assessment of an internal compound? If Yes, please pick a study molecule from the related list below</inlineHelpText>
        <label>Study/Topic involve internal compound?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medical_Value_Summary_Description__c</fullName>
        <inlineHelpText>Use the enter key to add descriptions on a new line.</inlineHelpText>
        <label>Medical Value Summary Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Medical_Value_Summary_URL__c</fullName>
        <inlineHelpText>Please add comma separated URLs if you are adding more than one</inlineHelpText>
        <label>Medical Value Summary URL</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Medical_Value_Summary__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>United States formulary communication documents (for example, dossiers and medical value summaries) for use with United States formulary decision makers.</inlineHelpText>
        <label>Medical Value Summary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Model_Description__c</fullName>
        <inlineHelpText>Use the enter key to add descriptions on a new line.</inlineHelpText>
        <label>Model Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Model_URL__c</fullName>
        <inlineHelpText>Please add comma separated URLs if you are adding more than one</inlineHelpText>
        <label>Model URL</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Model Link for Study Type=Modeling</inlineHelpText>
        <label>Model</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_Serious_Adverse_Events_Description__c</fullName>
        <inlineHelpText>Use the enter key to add descriptions on a new line.</inlineHelpText>
        <label>Non-Serious Adverse Events Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Non_Serious_Adverse_Events_List_URL__c</fullName>
        <inlineHelpText>Please add comma separated URLs if you are adding more than one</inlineHelpText>
        <label>Non-Serious Adverse Events List URL</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Non_Serious_Adverse_Events_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-Serious Adverse Events List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes_Log__c</fullName>
        <inlineHelpText>Use this field to keep notes, a log, or status updates on the study.</inlineHelpText>
        <label>Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrgAddress_TF__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OrgAddress TF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Description__c</fullName>
        <inlineHelpText>Use the enter key to add descriptions on a new line.</inlineHelpText>
        <label>Other - Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_URL__c</fullName>
        <inlineHelpText>Please add comma separated URLs if you are adding more than one</inlineHelpText>
        <label>Other URL</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Oversee_Execution_of_Research_Duration__c</fullName>
        <description>Duration Study was in Stage = Oversee Execution of Research before moving to Data Analysis and Reporting</description>
        <formula>IF(ISNULL(Date_Data_Analysis_and_Reporting__c), TODAY()-Date_Oversee_Execution_of_Research__c, Date_Data_Analysis_and_Reporting__c- Date_Oversee_Execution_of_Research__c)</formula>
        <inlineHelpText>Duration Study was in Stage = Oversee Execution of Research before moving to Data Analysis and Reporting</inlineHelpText>
        <label>Oversee Execution of Research Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payer_Dossier_Description__c</fullName>
        <inlineHelpText>Use the enter key to add descriptions on a new line.</inlineHelpText>
        <label>Payer Dossier Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Purpose__c</fullName>
        <label>Primary Purpose of the Study/Topic</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advancing Health Policy Environment</fullName>
                </value>
                <value>
                    <fullName>Benefit Risk Assessment</fullName>
                </value>
                <value>
                    <fullName>Clinical Outcomes Assessment Measure Development</fullName>
                </value>
                <value>
                    <fullName>Commercial Commitment</fullName>
                </value>
                <value>
                    <fullName>Medical Communications</fullName>
                </value>
                <value>
                    <fullName>Regulatory Commitment</fullName>
                </value>
                <value>
                    <fullName>Regulatory Strategy</fullName>
                </value>
                <value>
                    <fullName>Strategic Input</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Lead_Owner_TF__c</fullName>
        <label>Project_Lead_Owner_TF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Add the Project Manager or facilitator that supports your area.  Their name will be added to the study team by adding it to this field.</inlineHelpText>
        <label>Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RWE_Studies_DF</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <inlineHelpText>All Research Study/Research Topic start in the Approved status. Change the status to &quot;Active&quot; when effort begins. Change to &quot;Complete&quot; when milestones are complete. Change to &quot;Closed&quot; once all documentation has been retained, etc.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Protocol_Approval_Date__c</fullName>
        <label>Protocol Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Protocol_Approval_Required__c</fullName>
        <label>Protocol Approval Required?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Protocol_Title__c</fullName>
        <label>Protocol Title</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Questionnaire_Duration__c</fullName>
        <description>Duration Study was in Stage = Questionnaire before moving to Ideation.</description>
        <formula>IF(ISNULL(Date_Ideation__c), TODAY()-Date_Questionnaire__c, Date_Ideation__c- Date_Questionnaire__c)</formula>
        <inlineHelpText>Duration Study was in Stage = Questionnaire before moving to Ideation.</inlineHelpText>
        <label>Questionnaire Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Related_Business_Planning__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Business Planning</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Business_Planning__c.Business_Planning_Approval_Status__c</field>
                <operation>equals</operation>
                <value>Approved</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Business_Planning__c</referenceTo>
        <relationshipLabel>Research</relationshipLabel>
        <relationshipName>Research</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>